--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/48ef531a92.js" crossorigin="anonymous"></script>
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="src/css/style.css">
-    <title>Document</title>
+    <title>Catherine River Mills | Home</title>
 </head>
 <body>
     <!-- Navbar Header -->
