--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <header>
     <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 c-navbar">
         
-        <a class="navbar-brand c-navbar-brand pl-4" href="#">Catherine</a>
+        <a class="navbar-brand c-navbar-brand px-4 mr-5" href="#">Catherine</a>
         <button class="navbar-toggler c-toggler-button" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,7 @@
             <a class="nav-item nav-link c-nav-link pr-4" href="#">Area Attraction</a>
             <a class="nav-item nav-link c-nav-link pr-4" href="#">Renting Now</a>
           </div>
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav ml-auto pl-5">
             <li class="nav-item"><a href="#" target="_blank" class="twitter nav-link c-nav-link pr-4"><span class="fab fa-twitter"></span></a></li>
             <li class="nav-item"><a href="#" target="_blank" class="facebook nav-link c-nav-link pr-4"><span class="fab fa-facebook-f"></span></a></li>
             <a href="#" class="nav-item nav-link c-nav-link pr-4" data-toggle="modal" data-target="#searchModal"><span class="fa fa-search"></span></a>
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <div class="site-info text-center pt-2">
+        <div class="site-info text-center pt-3">
             &copy; 2021 - Catherine River mills | All Rights Reserved
         </div>
     </div>
