Search Field Size Changed

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="modal-body">
                 <form action="searchresult.html" method="post">
                     <div class="form-group">
-                      <select name="" id="" class="form-control">
+                      <select class="form-control form-control-lg" name="" id="inputlg">
                           <option value="Any">Bedrooms</option>
                           <option value="1">1</option>
                           <option value="2">2</option>
@@ -130,7 +130,7 @@
                       </select>
                   </div>
                   <div class="form-group">
-                      <select name="" id="" class="form-control">
+                      <select class="form-control form-control-lg" name="" id="inputlg">
                           <option value="Any">Rents</option>
                           <option value="< 600">< 600</option>
                           <option value="600 - 700">600 -700</option>
@@ -139,7 +139,10 @@
                           <option value="1000+">1000+</option>
                       </select>
                   </div>
-                    <input type="submit" class="btn btn-outline-light btn-block" value="Search">
+                  <div class="text-center">
+                    <input type="submit" class="btn btn-outline-light c-btn-search" value="Search">
+                  </div>
+                    
                     </form>
             </div>
         </div>
